<resources>
    <string name="app_name">CIS298Assignment2</string>

    <string name="convert_prompt">Convert:</string>
    <string name="action_settings">Settings</string>
    <string name="left_radial_group_text">FROM</string>
    <string name="right_radial_group_text">TO</string>
    <string name="radio_button_1_5">Celsius</string>
    <string name="radio_button_2_6">Fahrenheit</string>
    <string name="radio_button_3_7">Kelvin</string>
    <string name="radio_button_4_8">Rankine</string>
    <string name="convert_button">CONVERT</string>
    <string name="answer_formula">Enter a value and select Units to be converted from and to.</string>
    <string name="no_tempature_error_toast">You must enter a temperature first!</string>
    <string name="no_from_error_toast">You must select what the temperature scale you entered is! </string>
    <string name="no_to_error_toast">You must select what temperature scale you want to convert to!</string>
    <string name="same_scale_error">You must select two different types of temperature scales</string>
    <string name="formula_0"> °F = °C × 1.8 + 32</string>
    <string name="formula_1"> K = °C + 273.15</string>
    <string name="formula_2"> °Ra = °C × 1.8 + 491.67</string>
    <string name="formula_3">°C = (°F − 32) / 1.8</string>
    <string name="formula_4"> K = (°F + 459.67) / 1.8</string>
    <string name="formula_5">°Ra = °F + 459.67</string>
    <string name="formula_6"> °C = K − 273.15</string>
    <string name="formula_7"> °F = K × 1.8 − 459.67</string>
    <string name="formula_8"> °Ra = K × 1.8</string>
    <string name="formula_9">°C = °Ra / 1.8 - 273.15</string>
    <string name="formula_10">°F = °Ra - 459.67</string>
    <string name="formula_11"> K = °Ra / 1.8</string>

    



</resources>
